fix: prevent layout jumps

--- a/www/src/assets/css/02-base/_global.scss
+++ b/www/src/assets/css/02-base/_global.scss
@@ -10,6 +10,7 @@ html {
   text-rendering: optimizeLegibility;
   height: 100dvh;
   color-scheme: light dark;
+  scrollbar-gutter: stable;
 }
 
 body {
